JPS-1667 Сorrect line spacing: fix tabs additional spacing at bottom
Former-commit-id: 573863b4ea6371d7f0b3378416b2e41b9e5b9967

--- a/blocks/form/_form.scss
+++ b/blocks/form/_form.scss
@@ -130,11 +130,10 @@
 
 .ring-form__group {
   position: relative;
-  padding-top: $ring-unit;
-  padding-bottom: $ring-unit;
+  margin: $ring-unit*2;
 
-  &:last-child {
-    padding-bottom: 2*$ring-unit;
+  &:first-child {
+    margin-top: 0;
   }
 }
 
